# crack402

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Cross.toml  README.md  mise.toml  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
control-plane/: AGENTS.md  drizzle.config.ts  package.json  summary.md  tsconfig.json  vitest.auth.config.ts  vitest.config.ts  vitest.e2e.config.ts  worker-configuration.d.ts  wrangler.toml
control-plane/drizzle/: 0000_salty_rick_jones.sql  0001_add_cloud_provider_support.sql  0002_add_ssh_keys_and_bot_types.sql  0003_daffy_angel.sql  0004_overjoyed_wendell_vaughn.sql  0005_peaceful_network.sql
control-plane/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
control-plane/scripts/: export-openapi.ts  test-api.sh
control-plane/src/: index.ts  types.ts
control-plane/test/: TEST_USER_FLOWS.md
dashboard/: AGENTS.md  package.json  proxy.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: app-sidebar.tsx  bots-dashboard.tsx  dynamic-breadcrumb.tsx  theme-provider.tsx  theme-selector.tsx
dashboard/lib/: api-client.ts  auth-client.ts  auth.ts
docs/: openapi.json  package.json
docs/app/: layout.tsx
docs/lib/: openapi.ts
docs/scripts/: generate-api-docs.mjs
infra/cluster/: README.md
specs/: admin-dashboard.md  control-plane-api.yaml  control-plane.md  data-plane.md  firecracker-setup.md  high-level.md  iac.md  latitude-provisioning.md
specs/todo/: tf-firecracker-setup.md
(+159 files in other folders)
